--- a/package.json
+++ b/package.json
@@ -5,18 +5,24 @@
   "type": "module",
   "scripts": {
     "dev": "concurrently \"vite\" \"npx tailwindcss -i ./src/source.css -o ./src/App.css --watch\" ",
+    "dev-ex": "concurrently \"vite --host\" \"npx tailwindcss -i ./src/source.css -o ./src/App.css --watch\" ",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
+    "react-player": "^2.11.0",
+    "react-responsive": "^9.0.2",
+    "react-router-dom": "^6.6.1",
     "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
+    "@wixc3/react-board": "^2.1.3",
     "vite": "^3.2.3"
   }
 }
